# assisted-living-calendar

./: .gitignore  README.md
assets/branding/: README.md
assets/slide-decks/: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  auth.py  events.py  organizations.py  polls.py  residents.py  staff.py  vendors.py
backend/app/core/: config.py  qr.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  base.py  event.py  organization.py  poll.py  resident.py  staff.py  user_account.py
backend/app/schemas/: __init__.py  auth.py  organization.py  poll.py
backend/app/services/: budget_tracker.py  compliance_logger.py  polling_service.py  scheduling_engine.py  staff_optimizer.py
backend/app/tasks/: monthly_planner.py  reminders.py  reports.py
config/: dev.env  production.env  staging.env
docs/: api-spec.md  data-model.md  requirements.md  ux-guidelines.md
docs/compliance/: audit-trail.md  hipaa-checklist.md
frontend/: index.html  package-lock.json  package.json
frontend/src/app/: App.tsx
frontend/src/components/: EngagementFeed.tsx  PollBuilder.tsx  ScheduleTimeline.tsx
frontend/src/styles/: dashboard.css  global.css
infrastructure/ci-cd/github-actions/: deploy.yml  test.yml
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infrastructure/terraform/: README.md
scripts/: export_reports.py  generate_monthly_plan.py  maintenance.md  seed_data.py
tools/: gmail_draft.py  gmail_read.py  gmail_send.py
(+5 files in other folders)
